[workspace]
members = [
    "common",
    "db/pathdb",
    "state-trie",
    "smoke-test",
    "triedb",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.76"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/joey/bsc-reth"
repository = "https://github.com/joey/bsc-reth"

[workspace.lints]
rust = { unsafe_code = "forbid" }

[workspace.dependencies]
alloy-primitives = "1.3.0"
alloy-rlp = "0.3"
alloy-trie = "0.9.0"
auto_impl = "1.2"
thiserror = "1.0"
parking_lot = "0.12"
pretty_assertions = "1.4"
rayon = "1.8"
rand = "0.8"
hex = "0.4"
rocksdb = "0.24"
tracing = "0.1"
schnellru = "0.2"
tempfile = "3.8"
tikv-jemallocator = "0.6"
rust-eth-triedb-common = { version = "0.1.0", path = "common" }
rust-eth-triedb-pathdb = { version = "0.1.0", path = "db/pathdb" }
rust-eth-triedb-state-trie = { version = "0.1.0", path = "state-trie" }

# reth
#reth-trie-common = { git = "https://github.com/bnb-chain/reth.git", branch = "support_triedb"}
reth-metrics = { git = "https://github.com/bnb-chain/reth.git"}

# metrics (required by reth-metrics)
metrics = "0.24.0"
metrics-derive = "0.1"

[workspace.features]
jemalloc = ["tikv-jemallocator"]
jemalloc-prof = ["tikv-jemallocator?/profiling"]
asm-keccak = [
    "rust-eth-triedb-common/asm-keccak",
    "rust-eth-triedb-pathdb/asm-keccak",
    "rust-eth-triedb-state-trie/asm-keccak",
    "rust-eth-triedb/asm-keccak",
    "rust-eth-triedb-smoke-test/asm-keccak",
] 

[profile.release]
opt-level = 3
lto = "thin"
debug = "none"
strip = "symbols"
panic = "unwind"
codegen-units = 16

[profile.release-with-debug]
inherits = "release"
debug = 2
strip = "none"

[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1

[profile.maxperf.build-override]
opt-level = 3