[package]
name = "rust-eth-triedb-common"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Common traits and types for reth trie database implementations"

[lints]
workspace = true

[features]
default = []
# jemalloc = ["tikv-jemallocator"]  # Commented out for standard jemalloc migration
# jemalloc-prof = ["tikv-jemallocator?/profiling"]  # Commented out for standard jemalloc migration
jemalloc = ["jemallocator"]
jemalloc-prof = ["jemalloc", "jemalloc-sys?/profiling", "jemalloc-ctl?/stats"]

[dependencies]
# alloy
alloy-primitives = { workspace = true, features = ["asm-keccak"] }

# misc
auto_impl.workspace = true
thiserror.workspace = true

# Jemalloc support
# tikv-jemallocator = { workspace = true, optional = true }  # Commented out for standard jemalloc migration
jemallocator = { workspace = true, optional = true, features = ["profiling"] }
jemalloc-sys = { workspace = true, optional = true }
jemalloc-ctl = { workspace = true, optional = true }

[profile.maxperf]
inherits = "release"
opt-level = 3
lto = "thin"
codegen-units = 1