[package]
name = "rust-eth-triedb-common"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Common traits and types for reth trie database implementations"

[lints]
workspace = true

[features]
default = []
jemalloc = ["tikv-jemallocator"]
jemalloc-prof = ["tikv-jemallocator?/profiling"]
asm-keccak = ["alloy-primitives/asm-keccak"]

[dependencies]
# alloy
alloy-primitives = { workspace = true , asm-keccak = true}

# misc
auto_impl.workspace = true
thiserror.workspace = true

# Jemalloc support
tikv-jemallocator = { workspace = true, optional = true }

[profile.maxperf]
inherits = "release"
opt-level = 3
lto = "thin"
codegen-units = 1