[package]
name = "reth-triedb-smoke-test"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Smoke test for comparing BSC and Reth StateTrie implementations"

# Remove binary configuration since we're using tests now

[dependencies]
reth-triedb-state-trie = { path = "../state-trie" }
reth-triedb-pathdb = { path = "../db/pathdb" }
reth-triedb-common = { path = "../common" }
alloy-rlp = "0.3"
alloy-primitives = "1.3.0"
alloy-trie = "0.9.0"
rand = "0.8"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3.8"
hex = "0.4"

[dev-dependencies]
tempfile = "3.8"
