[package]
name = "rust-eth-triedb-smoke-test"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Smoke test for comparing BSC and Reth StateTrie implementations"

# Remove binary configuration since we're using tests now

[dependencies]
rust-eth-triedb-state-trie.workspace = true
rust-eth-triedb-pathdb.workspace = true
rust-eth-triedb-common.workspace = true
alloy-rlp.workspace = true
alloy-primitives.workspace = true
alloy-trie.workspace = true
rand.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile.workspace = true
hex.workspace = true
# tikv-jemallocator = { workspace = true, optional = true }  # Commented out for standard jemalloc migration
jemallocator = { workspace = true, optional = true, features = ["profiling"] }
jemalloc-sys = { workspace = true, optional = true }
jemalloc-ctl = { workspace = true, optional = true }

[dev-dependencies]
tempfile.workspace = true

[features]
# jemalloc = ["tikv-jemallocator"]  # Commented out for standard jemalloc migration
# jemalloc-prof = ["tikv-jemallocator?/profiling"]  # Commented out for standard jemalloc migration
jemalloc = ["jemallocator"]
jemalloc-prof = ["jemalloc", "jemalloc-sys?/profiling", "jemalloc-ctl?/stats"]

[profile.maxperf]
inherits = "release"
opt-level = 3
lto = "thin"
codegen-units = 1