[package]
name = "rust-eth-triedb-smoke-test"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Smoke test for comparing BSC and Reth StateTrie implementations"

# Remove binary configuration since we're using tests now

[dependencies]
rust-eth-triedb-state-trie.workspace = true
rust-eth-triedb-pathdb.workspace = true
rust-eth-triedb-common.workspace = true
alloy-rlp.workspace = true
alloy-primitives = { workspace = true , asm-keccak = true}
alloy-trie.workspace = true
rand.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile.workspace = true
hex.workspace = true
tikv-jemallocator = { workspace = true, optional = true }

[dev-dependencies]
tempfile.workspace = true

[features]
jemalloc = ["tikv-jemallocator"]
asm-keccak = ["alloy-primitives/asm-keccak", "rust-eth-triedb-common/asm-keccak", "rust-eth-triedb-state-trie/asm-keccak", "rust-eth-triedb-pathdb/asm-keccak"]

[profile.maxperf]
inherits = "release"
opt-level = 3
lto = "thin"
codegen-units = 1