[package]
name = "rust-eth-triedb-state-trie"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Secure state trie implementation for reth"

[lints]
workspace = true

[dependencies]
# reth
# reth-primitives-traits.workspace = true
rust-eth-triedb-memorydb.workspace = true
rust-eth-triedb-pathdb.workspace = true
rust-eth-triedb-common.workspace = true

# alloy
alloy-primitives.workspace = true
alloy-rlp.workspace = true
alloy-trie.workspace = true

# misc
auto_impl.workspace = true
thiserror.workspace = true
rayon.workspace = true
arbitrary = { version = "1.0", optional = true }
rand.workspace = true
hex.workspace = true

[features]
# serde = ["alloy-primitives/serde"]
arbitrary = ["dep:arbitrary"]

[dev-dependencies]
# reth
# reth-primitives-traits = { workspace = true, features = ["test-utils"] }
# reth-trie = { workspace = true, features = ["test-utils"] }

# misc
pretty_assertions.workspace = true
tempfile.workspace = true
