[package]
name = "triedb"
version = "0.1.0"
edition = "2021"
description = "Trie database implementation for Ethereum state management"
license = "MIT OR Apache-2.0"

[dependencies]
# Local dependencies
reth-triedb-state-trie = { path = "../state-trie" }
reth-triedb-common = { path = "../common" }
reth-triedb-pathdb = { path = "../db/pathdb" }

# External dependencies
alloy-primitives = "1.3.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
rayon.workspace = true
once_cell = "1.19"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
tempfile = "3.8"
