[package]
name = "rust-eth-triedb"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Trie database implementation for Ethereum state management"

[dependencies]
# Local dependencies
rust-eth-triedb-state-trie.workspace = true
rust-eth-triedb-common.workspace = true
rust-eth-triedb-pathdb.workspace = true

# External dependencies
alloy-primitives.workspace = true
thiserror.workspace = true
serde = { version = "1.0", features = ["derive"] }
rayon.workspace = true
once_cell = "1.19"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
tempfile.workspace = true
