[package]
name = "rust-eth-triedb"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Trie database implementation for Ethereum state management"

[dependencies]
# Local dependencies
rust-eth-triedb-state-trie.workspace = true
rust-eth-triedb-common.workspace = true
rust-eth-triedb-pathdb.workspace = true

#alloy
alloy-trie.workspace = true

#reth
#reth-trie-common.workspace = true
reth-metrics = { workspace = true, features = ["common"] }

# LRU Cache
schnellru.workspace = true

# metrics (required by reth-metrics derive macro)
metrics.workspace = true

# External dependencies
alloy-primitives = { workspace = true , asm-keccak = true}
thiserror.workspace = true
serde = { version = "1.0", features = ["derive"] }
rayon.workspace = true
once_cell = "1.19"
tracing.workspace = true

# Jemalloc support
tikv-jemallocator = { workspace = true, optional = true }

[features]
default = []
jemalloc = ["tikv-jemallocator"]
jemalloc-prof = ["tikv-jemallocator?/profiling"]
asm-keccak = ["alloy-primitives/asm-keccak", "rust-eth-triedb-common/asm-keccak", "rust-eth-triedb-state-trie/asm-keccak", "rust-eth-triedb-pathdb/asm-keccak"]

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
tempfile.workspace = true
serial_test = "0.8"

[profile.maxperf]
inherits = "release"
opt-level = 3
lto = "thin"
codegen-units = 1