[package]
name = "rust-eth-triedb-memorydb"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "In-memory database implementation for reth trie"

[lints]
workspace = true

[features]
default = []
jemalloc = ["tikv-jemallocator"]

[dependencies]
rust-eth-triedb-common.workspace = true

# alloy
alloy-primitives = { workspace = true, features = ["asm-keccak"] }

# misc
auto_impl.workspace = true
thiserror.workspace = true
parking_lot.workspace = true

# Jemalloc support
tikv-jemallocator = { workspace = true, optional = true }

[dev-dependencies]
# misc
pretty_assertions.workspace = true

[profile.maxperf]
inherits = "release"
opt-level = 3
lto = "thin"
codegen-units = 1