[package]
name = "rust-eth-triedb-pathdb"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "PathDB implementation for RocksDB integration"

[dependencies]
# reth
rust-eth-triedb-common.workspace = true

# alloy
alloy-primitives.workspace = true

# RocksDB
rocksdb.workspace = true

# Error handling
thiserror.workspace = true

# Logging
tracing.workspace = true

# LRU Cache
schnellru.workspace = true

# Testing
tempfile.workspace = true

[dev-dependencies]
tempfile.workspace = true
