[package]
name = "rust-eth-triedb-pathdb"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "PathDB implementation for RocksDB integration"

[dependencies]
# reth
rust-eth-triedb-common.workspace = true

# Primitives
alloy-primitives = { workspace = true }
alloy-trie.workspace = true

# RocksDB, 
rocksdb = { workspace = true, features = ["multi-threaded-cf", "io-uring", "jemalloc"] }

# Error handling
thiserror.workspace = true

# Logging
tracing.workspace = true

# LRU Cache
schnellru.workspace = true

# Testing
tempfile.workspace = true

# reth
reth-metrics = { workspace = true, features = ["common"] }

# metrics (required by reth-metrics derive macro)
metrics.workspace = true

# Jemalloc support
tikv-jemallocator = { workspace = true, optional = true }

[features]
default = []
jemalloc = ["tikv-jemallocator"]
jemalloc-prof = ["tikv-jemallocator?/profiling"]
asm-keccak = ["alloy-primitives/asm-keccak"]

[dev-dependencies]
tempfile.workspace = true

[profile.maxperf]
inherits = "release"
opt-level = 3
lto = "thin"
codegen-units = 1